# workflower

./: README.md  pyproject.toml
tests/: test_workflower.py
workflower/: test.ipynb  wiki_word_count.py
