[tool.poetry]
name = "workflower"
version = "0.1.0"
description = ""
authors = ["ANaka <alex@loyalfordogs.com>"]

[tool.poetry.dependencies]
python = "^3.8"
seaborn = "^0.12.2"
redun = {extras = ["postgres"], version = "^0.12.0"}
scikit-learn = "^1.2.1"
beautifulsoup4 = "^4.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
